# g4genericbiasingpuzzle

./: CMakeLists.txt  README.md  genericBiasing.cc
include/: myActionInitialization.hh  myAnalysis.hh  myDetectorConstruction.hh  myEventAction.hh  myOptnSplitAndKillByImportance.hh  myOptrSplitAndKillByImportance.hh  myParallelWorld.hh  myPhysicsList.hh  myPrimaryGeneratorAction.hh  myRunAction.hh
macros/: init_vis.mac  vis.mac
src/: myActionInitialization.cc  myDetectorConstruction.cc  myEventAction.cc  myOptnSplitAndKillByImportance.cc  myOptrSplitAndKillByImportance.cc  myParallelWorld.cc  myPhysicsList.cc  myPrimaryGeneratorAction.cc  myRunAction.cc
